Update print statement to display 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
         <div class="input-group">
           <label for="username"><i class="fas fa-user-secret"></i> أدخل اسم المستخدم (بدون @gmail.com)</label>
           <div class="input-with-icon">
-            <input type="text" id="username" placeholder="مثال: basim" autocomplete="off" />
+            <input type="text" id="username" placeholder="مثال: rajvet" autocomplete="off" />
             <i class="fas fa-at"></i>
           </div>
         </div>
@@ -713,4 +713,5 @@
     });
   </script>
 </body>
+
 </html>
